- Fix status area heigh to avoid scroll jumps when the status changes (#346)

--- a/src/app/pages/submission/submission-edit/submission-edit.component.css
+++ b/src/app/pages/submission/submission-edit/submission-edit.component.css
@@ -34,3 +34,7 @@
   color: #fff;
   text-decoration: underline;
 }
+
+.st-edit-status-message {
+  min-height: 17rem;
+}
